# Premiere-Pro-edit-bibl-windows

./: .gitignore  LICENSE  PORTING_PLAN.md  PORTING_REPORT.md  README.md  THIRD_PARTY_NOTICES.md  WINDOWS_SETUP.md  batch.ps1  constraints-windows-cu128.txt  install.ps1  pyproject.toml  requirements-windows.txt  run.ps1  scratch_pathurl_test.py
.claude/agents/: content-researcher.md  cut-editor.md  edit-director.md  shorts-producer.md  subtitle-editor.md  video-planner.md
.claude/skills/content-research/: SKILL.md
.claude/skills/cut-editing/: SKILL.md
.claude/skills/edit-direction/: SKILL.md
.claude/skills/shorts-production/: SKILL.md
.claude/skills/subtitle-editing/: SKILL.md
.claude/skills/video-edit-pipeline/: SKILL.md
.github/workflows/: windows-tests.yml
config/: aggressive.json  conservative.json  standard.json
docs/: FEATURE_PARITY_REPORT.md  KNOWN_GOOD_ENVIRONMENT.txt
scripts/: premiere_import_smoke.jsx
src/bibl_windows/: __init__.py  artifacts.py  claude_assets.py  cli.py  cuda_probe.py  ffmpeg_tools.py  io_json.py  media_probe.py  paths.py  pipeline.py  presets.py  runtime.py
tests/: test_audio_features.py  test_claude_assets.py  test_cli_doctor.py  test_cli_errors.py  test_cli_parser.py  test_cut_analysis.py  test_fcp7.py  test_ffmpeg_paths.py  test_html_report.py  test_mocked_e2e.py  test_paths.py  test_pipeline_limits_and_outputs.py  test_premiere_automation.py  test_premiere_xml_validation.py  test_shorts_and_multicam.py  test_srt.py  test_stt_backend.py  test_subtitle_exports.py  test_timeline_mapper.py  test_timeline_protection.py
(+32 files in other folders)
